@@ -1,13 +1,15 @@
 package com.ssafy.docshund.domain.forums.service;
 
-import static com.ssafy.docshund.global.exception.GlobalErrorCode.RESOURCE_NOT_FOUND;
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.MISMATCH_ARTICLE;
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.NOT_FOUND_ARTICLE;
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.NOT_FOUND_COMMENT;
+import static com.ssafy.docshund.domain.users.exception.user.UserExceptionCode.*;
+import static com.ssafy.docshund.global.exception.GlobalErrorCode.INVALID_RESOURCE_OWNER;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,13 +20,10 @@ import com.ssafy.docshund.domain.forums.entity.Article;
 import com.ssafy.docshund.domain.forums.entity.Comment;
 import com.ssafy.docshund.domain.forums.entity.Status;
 import com.ssafy.docshund.domain.forums.exception.ForumException;
-import com.ssafy.docshund.domain.forums.exception.ForumExceptionCode;
 import com.ssafy.docshund.domain.forums.repository.ArticleRepository;
 import com.ssafy.docshund.domain.forums.repository.CommentRepository;
 import com.ssafy.docshund.domain.users.entity.User;
 import com.ssafy.docshund.domain.users.exception.user.UserException;
-import com.ssafy.docshund.global.exception.GlobalErrorCode;
-import com.ssafy.docshund.global.exception.ResourceNotFoundException;
 import com.ssafy.docshund.global.util.user.UserUtil;
 
 import lombok.RequiredArgsConstructor;
@@ -45,9 +44,10 @@ public class CommentServiceImpl implements CommentService {
 		List<Comment> comments = commentRepository.findAllByArticleId(articleId);
 
 		return comments.stream()
-				.map(CommentInfoDto::from)
-				.flatMap(Optional::stream)
-				.collect(Collectors.toList());
+			.map(CommentInfoDto::from)
+			.filter(Optional::isPresent)
+			.map(Optional::get)
+			.toList();
 	}
 
 	@Override
@@ -57,9 +57,10 @@ public class CommentServiceImpl implements CommentService {
 		List<Comment> comments = commentRepository.findAllByUserId(userId);
 
 		return comments.stream()
-				.map(CommentInfoDto::from)
-				.flatMap(Optional::stream)
-				.collect(Collectors.toList());
+			.map(CommentInfoDto::from)
+			.filter(Optional::isPresent)
+			.map(Optional::get)
+			.toList();
 	}
 
 	@Override
@@ -67,11 +68,11 @@ public class CommentServiceImpl implements CommentService {
 	public CommentInfoDto createComment(Integer articleId, CommentDto commentDto) {
 
 		Article article = articleRepository.findById(articleId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_ARTICLE));
 
 		User user = userUtil.getUser();
 		if (user == null) {
-			throw new AccessDeniedException("NO PERMISSION TO UNLOGINED USER");
+			throw new UserException(USER_NOT_FOUND);
 		}
 
 		Comment savedComment = commentRepository.save(new Comment(null, user, article, commentDto.getContent()));
@@ -80,10 +81,10 @@ public class CommentServiceImpl implements CommentService {
 		alertsService.sendCommentAlert(article, user);
 
 		return new CommentInfoDto(savedComment.getArticle().getArticleId(), savedComment.getCommentId(),
-				savedComment.getContent(),
-				savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
-				savedComment.getUser().getUserId(), savedComment.getUser().getNickname(),
-				savedComment.getUser().getProfileImage(), new ArrayList<>()
+			savedComment.getContent(),
+			savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
+			savedComment.getUser().getUserId(), savedComment.getUser().getNickname(),
+			savedComment.getUser().getProfileImage(), new ArrayList<>()
 		);
 	}
 
@@ -92,28 +93,28 @@ public class CommentServiceImpl implements CommentService {
 	public CommentInfoDto createReply(Integer articleId, Integer commentId, CommentDto commentDto) {
 
 		Article article = articleRepository.findById(articleId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_ARTICLE));
 
 		Comment parentComment = commentRepository.findById(commentId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		User user = userUtil.getUser();
 		if (user == null) {
-			throw new AccessDeniedException("NO PERMISSION TO UNLOGINED USER");
+			throw new UserException(USER_NOT_FOUND);
 		}
 
 		Comment savedComment = commentRepository.save(
-				new Comment(parentComment, user, article, commentDto.getContent()));
+			new Comment(parentComment, user, article, commentDto.getContent()));
 
 		// 실시간 알림 보내기
 		alertsService.sendCommentAlert(article, user);    // 게시글 작성자에게도 알림
 		alertsService.sendCommentReplyAlert(parentComment, user);    // 댓글 작성자에게도 알림
 
 		return new CommentInfoDto(savedComment.getArticle().getArticleId(), savedComment.getCommentId(),
-				savedComment.getContent(),
-				savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
-				savedComment.getUser().getUserId(), savedComment.getUser().getNickname(),
-				savedComment.getUser().getProfileImage(), new ArrayList<>()
+			savedComment.getContent(),
+			savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
+			savedComment.getUser().getUserId(), savedComment.getUser().getNickname(),
+			savedComment.getUser().getProfileImage(), new ArrayList<>()
 		);
 	}
 
@@ -122,15 +123,15 @@ public class CommentServiceImpl implements CommentService {
 	public void updateComment(Integer articleId, Integer commentId, CommentDto commentDto) {
 
 		Comment comment = commentRepository.findById(commentId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		if (!comment.getArticle().getArticleId().equals(articleId)) {
-			throw new ForumException(ForumExceptionCode.MISMATCH_ARTICLE);
+			throw new ForumException(MISMATCH_ARTICLE);
 		}
 
 		User user = userUtil.getUser();
 		if (user == null || !comment.getUser().getUserId().equals(user.getUserId())) {
-			throw new UserException(GlobalErrorCode.INVALID_RESOURCE_OWNER);
+			throw new UserException(INVALID_RESOURCE_OWNER);
 		}
 
 		comment.modifyContent(commentDto.getContent());
@@ -140,19 +141,16 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public void deleteComment(Integer articleId, Integer commentId) {
 
-		Article article = articleRepository.findById(articleId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
-
 		Comment comment = commentRepository.findById(commentId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		if (!comment.getArticle().getArticleId().equals(articleId)) {
-			throw new ForumException(ForumExceptionCode.MISMATCH_ARTICLE);
+			throw new ForumException(MISMATCH_ARTICLE);
 		}
 
 		User user = userUtil.getUser();
 		if (user == null || !comment.getUser().getUserId().equals(user.getUserId())) {
-			throw new UserException(GlobalErrorCode.INVALID_RESOURCE_OWNER);
+			throw new UserException(INVALID_RESOURCE_OWNER);
 		}
 
 		comment.modifyToDelete();
@@ -163,11 +161,11 @@ public class CommentServiceImpl implements CommentService {
 	public void modifyCommentStatus(Integer articleId, Status status) {
 		User user = userUtil.getUser();
 		if (!userUtil.isAdmin(user)) {
-			throw new RuntimeException("어드민이 아닙니다.");
+			throw new UserException(USER_NOT_ADMIN);
 		}
 
 		Comment comment = commentRepository.findById(articleId)
-				.orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		comment.modifyStatus(status);
 	}
